--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
           <groupId>org.eclipse.jetty</groupId>
           <artifactId>jetty-maven-plugin</artifactId>
           <version>11.0.13</version>
+            <configuration>
+                <webApp>
+                    <contextPath>/kuritter</contextPath>
+                </webApp>
+            </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
